--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,14 +1,22 @@
 .container {
   margin: 20px auto;
-  width: 600px;
+  width: 900px;
   padding: 0px 20px 20px 20px;
   border: 1px dotted black;
 }
 
+html{
+  background: url('http://www.marshu.com/images-website/collection-pictures/car-wrecks-crashes-accidents/funny-car-Del-Worsham.jpg')no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 .racer_table td {
   background-color: white;
-  height: 20px;
-  width: 20px;
+  height: 30px;
+  width: 45px;
 }
 
 .racer_table td {
