--- a/app/views/race.erb
+++ b/app/views/race.erb
@@ -7,6 +7,13 @@
     <p id="game_over"></p>
   </div>
 
+  <p id="game" data-game= <%= @game.id %> >  </p>
+ 
+  <div>
+    <p id="player1"> <%= @player1.name %> </p>
+    <p id="player2"> <%= @player2.name %> </p>
+  </div>
+
  <table class="racer_table">
   <tr id="player1_strip">
     <td class="active1"></td>
