--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -25,7 +25,7 @@
   </form>  
 
   <br><br>
-  <a href="/race"> Race away!! </a>
+  <!-- <a href="/race"> Race away!! </a> -->
   <br><br>
 
 </div>
