--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,12 +1,30 @@
 .container {
   margin: 20px auto;
-  width: 900px;
+  width: 1000px;
   padding: 0px 20px 20px 20px;
   border: 1px dotted black;
 }
 
+.names {
+  text-align: center;
+}
+
+#bottom_links {
+  text-align: center;
+  color: black;
+}
+
+h1 {
+  text-align: center;
+  color: black;
+}
+
+#game_over {
+  text-align: center;
+}
+
 html{
-  background: url('http://www.marshu.com/images-website/collection-pictures/car-wrecks-crashes-accidents/funny-car-Del-Worsham.jpg')no-repeat center center fixed;
+  background: url('http://www.fastcoolcars.com/images/wallpaper/cool2.jpg')no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -15,8 +33,8 @@ html{
 
 .racer_table td {
   background-color: white;
-  height: 30px;
-  width: 45px;
+  height: 70px;
+  width: 110px;
 }
 
 .racer_table td {
